# smiles2spec_foundry

./: README.md  environment.yml
smiles2spec_v2/: Makefile  README.md  config.yml  pyproject.toml  train_nn.py
smiles2spec_v2/scripts/: evaluate.py  featurize.py  train_nn.py  train_rf.py  visualize.py
smiles2spec_v2/src/smiles2spec/: __init__.py
smiles2spec_v2/src/smiles2spec/core/: __init__.py  config.py  exceptions.py  loader.py
smiles2spec_v2/src/smiles2spec/domain/: __init__.py  features_2d.py  features_3d.py  molecule.py  spectrum.py
smiles2spec_v2/src/smiles2spec/evaluation/: __init__.py  evaluator.py  metrics.py
smiles2spec_v2/src/smiles2spec/services/: __init__.py  featurizer.py  pipeline.py  predictor.py  training.py
smiles2spec_v2/src/smiles2spec/visualization/: __init__.py  constants.py  diagnostics.py
spec2smiles_pkg/: .env.example  Makefile  README.md  launch_all.sh  pyproject.toml
spec2smiles_pkg/data_30desc/: test_data.jsonl  val_data.jsonl
spec2smiles_pkg/models_30desc/direct_decoder/: history.json  metrics.json  summary.json
spec2smiles_pkg/models_30desc/part_b/: history.json  metrics.json  summary.json  visualization_data.json
spec2smiles_pkg/models_gpu/evaluation/: hybrid_pipeline_results.json
spec2smiles_pkg/models_gpu/hybrid/: config.json  visualization_data.json
spec2smiles_pkg/models_gpu/part_a/: metrics.json  summary.json
spec2smiles_pkg/models_gpu/part_b/: history.json  summary.json
spec2smiles_pkg/models_gpu/transformer/: config.json  model_summary.json  visualization_data.json
spec2smiles_pkg/rl_molecule_game/: __init__.py  agent.py  environment.py  evaluate.py  rewards.py  train.py  train_fast.py
spec2smiles_pkg/rl_molecule_game/configs/: default.yaml
spec2smiles_pkg/rl_molecule_game/outputs/metrics/: episode_000100.json  episode_000200.json  episode_000300.json  episode_000400.json  episode_000500.json  episode_000800.json  episode_001200.json  episode_001600.json  episode_002000.json  episode_002400.json  episode_002800.json  episode_003200.json  episode_003600.json  episode_004000.json  episode_004400.json  episode_004800.json  episode_005000.json
spec2smiles_pkg/scripts/: eval_gnps_fast.py  eval_gnps_large.py  eval_gnps_parallel_sweep.py  eval_gnps_parallel_sweep_small.py  eval_gnps_single.py  eval_gnps_small.py  eval_gnps_tiny.py  eval_gnps_topp.py  eval_improved_beam.py  eval_nucleus.py  eval_part_b_v2.py  evaluate.py  train_gnps.py  train_gnps_oracle_28desc.py  train_gnps_small.py  train_gnps_tiny.py  train_part_b.py  visualize.py  visualize_model.py
spec2smiles_pkg/src/config/: settings.py
spec2smiles_pkg/src/domain/: __init__.py  descriptors.py  spectrum.py
spec2smiles_pkg/src/services/: __init__.py  data_loader.py  part_a.py  part_b.py  preprocessor.py
spec2smiles_pkg/src/spec2smiles/: __init__.py
spec2smiles_pkg/src/utils/: __init__.py  exceptions.py  metrics.py
(+121 files in other folders)
