[tool.poetry]
name = "spec2smiles"
version = "0.1.0"
description = "Mass Spectrum to Molecular Structure Prediction Pipeline"
authors = ["Yusuf Mohamed"]
license = "MIT"
readme = "README.md"
packages = [{include = "spec2smiles", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.24.0,<2.0.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
torch = ">=2.0.0"
lightgbm = ">=4.0.0"
selfies = ">=2.1.0"
pyyaml = ">=6.0"
click = ">=8.1.0"
tqdm = ">=4.65.0"
joblib = ">=1.3.0"
rdkit = "^2025.9.3"

[tool.poetry.scripts]
spec2smiles = "spec2smiles.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
